feat: 서비스 소개 페이지 반응형 디자인 적용

--- a/src/components/intro/ui/CompanyRecruitCard.module.scss
+++ b/src/components/intro/ui/CompanyRecruitCard.module.scss
@@ -6,7 +6,8 @@
   gap: 20px;
   border: 1px solid #eae8e2;
   border-radius: 20px;
-  width: 862px;
+  width: 100%;
+  max-width: 862px;
   box-sizing: border-box;
 
   .title {
