--- a/src/components/intro/ui/CompetencyManagementCard.module.scss
+++ b/src/components/intro/ui/CompetencyManagementCard.module.scss
@@ -6,7 +6,8 @@
   gap: 20px;
   border: 1px solid #eae8e2;
   border-radius: 20px;
-  width: 862px;
+  max-width: 862px;
+  width: 100%;
   box-sizing: border-box;
 
   .title {
