--- a/src/components/evaluation3D/ui/CompetencyInsightCard.module.scss
+++ b/src/components/evaluation3D/ui/CompetencyInsightCard.module.scss
@@ -1,12 +1,13 @@
 .competencyInsightCard {
-  padding: 20px 40px;
+  padding: 20px 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
   border: 1px solid #eae8e2;
   border-radius: 20px;
-  width: 862px;
+  width: 100%;
+  max-width: 862px;
   box-sizing: border-box;
 
   .title {
