--- a/src/pages/evaluation3D/ui/Evaluation3D.module.scss
+++ b/src/pages/evaluation3D/ui/Evaluation3D.module.scss
@@ -25,7 +25,9 @@
   flex-direction: column;
   align-items: center;
   gap: 80px;
-  padding: 40px 60px 0px 60px;
+  padding-top: 40px;
+  box-sizing: border-box;
+  text-align: center;
 
   .titleSection {
     width: 100%;
