--- a/src/pages/analyze/ui/Analyze.module.scss
+++ b/src/pages/analyze/ui/Analyze.module.scss
@@ -231,6 +231,30 @@
         }
       }
     }
+    .urlInputGroup {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+      align-items: baseline;
+
+      input {
+        width: 100%;
+        box-sizing: border-box;
+        height: 3.5rem;
+        font-size: 1rem;
+        background-color: #f6f5ef;
+        border-radius: 0.5rem;
+        border: none;
+        padding: 0rem 0.75rem;
+        color: #969696;
+
+        &:focus {
+          outline: 1px solid #4d4d4d;
+          color: black;
+        }
+      }
+    }
   }
 
   .save {
