--- a/src/pages/team/ui/Team.module.scss
+++ b/src/pages/team/ui/Team.module.scss
@@ -24,18 +24,14 @@
   flex-direction: column;
   align-items: center;
   gap: 40px;
+  width: 100%;
   max-width: 864px;
 
   .title {
     color: #990e17;
     font-size: 36px;
     font-weight: bold;
-  }
-
-  .subtitle {
-    color: #990e17;
-    font-size: 20px;
-    font-weight: bold;
+    text-align: center;
   }
 
   .professor {
@@ -44,20 +40,55 @@
     gap: 20px;
     padding: 0px 12px;
     box-sizing: border-box;
+    width: 100%;
 
-    .teamImage {
-      width: 100%;
-    }
+    .nameSection {
+      color: #969696;
+      font-size: 24px;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding-left: 24px;
 
-    span {
-      .title {
-        color: #131313;
-        font-size: 20px;
+      &::before {
+        content: "";
+        width: 4px;
+        height: 40px;
+        background-color: #990e17;
+        display: inline-block;
+        border-radius: 2px;
+      }
+
+      .name {
+        color: #4d4d4d;
+        font-size: 36px;
         font-weight: bold;
       }
-      color: #969696;
+    }
+
+    .description {
+      background-color: #f0ece8;
+      width: 100%;
+      padding: 0px 48px 24px 48px;
+      box-sizing: border-box;
+      position: relative;
+      color: #4d4d4d;
       font-size: 16px;
-      font-weight: 400;
+
+      .title {
+        color: #4d4d4d;
+        font-size: 16px;
+        font-weight: bold;
+      }
+
+      .professorImage {
+        width: 100%;
+        max-width: 390px;
+        position: absolute;
+        bottom: 0px;
+        right: 0px;
+      }
     }
   }
 
@@ -170,6 +201,13 @@
 
 @media (max-width: 767px) {
   .wrapper {
+    .professor {
+      .description {
+        .professorImage {
+          position: static;
+        }
+      }
+    }
     .content {
       grid-template-columns: 1fr;
     }
@@ -178,6 +216,11 @@
 
 @media (max-width: 479px) {
   .wrapper {
+    .professor {
+      .description {
+        padding: 0px 24px 24px 24px;
+      }
+    }
     .content {
       .card {
         gap: 8px;
