--- a/src/layouts/analysis/ui/AnalysisDetail.module.scss
+++ b/src/layouts/analysis/ui/AnalysisDetail.module.scss
@@ -85,6 +85,7 @@
     border-radius: 8px;
     padding: 12px;
     box-sizing: border-box;
+    white-space: pre-wrap;
   }
 
   .companyAndPosition {
