--- a/src/shared/header/ui/Header.module.scss
+++ b/src/shared/header/ui/Header.module.scss
@@ -19,6 +19,10 @@
 .logo {
   display: flex;
   align-items: center;
+
+  .logoImage {
+    width: 280px;
+  }
 }
 
 .rightSection {
@@ -179,6 +183,10 @@
     left: 50%;
     transform: translateX(-50%);
     transition: transform 0.5s ease-out;
+
+    .logoImage {
+      width: 250px;
+    }
   }
 
   .menuIcon {
