--- a/src/pages/landing/ui/Landing.module.scss
+++ b/src/pages/landing/ui/Landing.module.scss
@@ -61,12 +61,8 @@
         border-radius: 30px;
         background-color: #f4f2ed;
         border: none;
-        cursor: pointer;
         transition: background-color 0.3s ease;
-
-        &.active {
-          background-color: #fc8e8e;
-        }
+        background-color: #fc8e8e;
       }
     }
 
@@ -93,10 +89,8 @@
     justify-content: center;
 
     .image {
-      border: 8px solid #f5f5f5;
-      border-radius: 12px;
-      width: 740px;
-      box-sizing: border-box;
+      width: 100%;
+      max-width: 740px;
     }
   }
 }
@@ -338,9 +332,10 @@
       width: 100%;
       align-items: center;
       text-align: center;
+      padding: 0px 12px;
+      box-sizing: border-box;
       img {
-        border: 8px solid #f5f5f5;
-        border-radius: 12px;
+        width: 100%;
       }
     }
   }
