feat: 랜딩페이지 - 메인 이미지 변경 및 스타일 조정

--- a/src/pages/landing/ui/Landing.module.scss
+++ b/src/pages/landing/ui/Landing.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 }
 
 .wrapper {
@@ -16,6 +17,9 @@
   display: flex;
   gap: 50px;
   margin-top: 186px;
+  width: 100%;
+  padding-left: 60px;
+  box-sizing: border-box;
 
   .leftSection {
     display: flex;
@@ -87,10 +91,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex-shrink: 0;
+    width: 1060px;
 
     .image {
       width: 100%;
-      max-width: 740px;
     }
   }
 }
@@ -305,16 +310,6 @@
 }
 
 @media (max-width: 1279px) {
-  .intro {
-    gap: 8px;
-
-    .rightSection {
-      .image {
-        width: 600px;
-      }
-    }
-  }
-
   .improvement {
     .cardSection {
       img {
