style: 헤더 스켈레톤에 패딩 및 박스 사이징 추가, 로고 이미지 크기 조정

--- a/src/layouts/header/ui/HeaderSkeleton.module.scss
+++ b/src/layouts/header/ui/HeaderSkeleton.module.scss
@@ -13,11 +13,17 @@
   justify-content: space-between;
   align-items: center;
   max-width: 80rem;
+  padding: 0rem 2.5rem;
+  box-sizing: border-box;
 }
 
 .logo {
   display: flex;
   align-items: center;
+
+  .logoImage {
+    width: 17.5rem;
+  }
 }
 
 .menuIcon {
