fix: 내 이력서 - 입력 필드를 텍스트 영역으로 변경 및 자동 높이 조정 추가

--- a/src/pages/resume/ui/Resume.module.scss
+++ b/src/pages/resume/ui/Resume.module.scss
@@ -134,6 +134,24 @@
     }
   }
 
+  textarea {
+    width: 100%;
+    box-sizing: border-box;
+    height: 3.5rem;
+    font-size: 1rem;
+    background-color: #f6f5ef;
+    border-radius: 0.5rem;
+    border: none;
+    padding: 0.75rem;
+    padding-top: 1.15rem;
+    overflow: hidden;
+    resize: none;
+
+    &:focus {
+      outline: 1px solid #4d4d4d;
+    }
+  }
+
   .inactiveInput {
     color: #4d4d4d;
   }
