--- a/src/pages/analyze/ui/Analyze.module.scss
+++ b/src/pages/analyze/ui/Analyze.module.scss
@@ -204,7 +204,7 @@
 
       .introductionContent {
         width: 100%;
-        height: 24rem;
+        height: 24rem !important;
         color: #969696;
         background-color: #f4f2ed;
         padding: 0.75rem;
