--- a/src/pages/analyze/ui/Analyze.module.scss
+++ b/src/pages/analyze/ui/Analyze.module.scss
@@ -144,11 +144,14 @@
         border-radius: 0.5rem;
         border: none;
         padding: 0rem 0.75rem;
-        color: #969696;
+        color: #131313;
 
         &:focus {
           outline: 1px solid #4d4d4d;
-          color: black;
+        }
+
+        &::placeholder {
+          color: #969696;
         }
       }
 
@@ -156,7 +159,7 @@
         width: 100%;
         height: 3.5rem;
         overflow: hidden;
-        color: #969696;
+        color: #131313;
         background-color: #f4f2ed;
         padding: 0.75rem;
         padding-top: 1.2rem;
@@ -168,7 +171,10 @@
 
         &:focus {
           outline: 1px solid #4d4d4d;
-          color: black;
+        }
+
+        &::placeholder {
+          color: #969696;
         }
       }
       .errorText {
@@ -205,7 +211,7 @@
       .introductionContent {
         width: 100%;
         height: 24rem !important;
-        color: #969696;
+        color: #131313;
         background-color: #f4f2ed;
         padding: 0.75rem;
         resize: none;
@@ -216,7 +222,9 @@
 
         &:focus {
           outline: 1px solid #4d4d4d;
-          color: black;
+        }
+        &::placeholder {
+          color: #969696;
         }
       }
     }
@@ -242,11 +250,13 @@
           border-radius: 0.5rem;
           border: none;
           padding: 0rem 0.75rem;
-          color: #969696;
+          color: #131313;
 
           &:focus {
             outline: 1px solid #4d4d4d;
-            color: black;
+          }
+          &::placeholder {
+            color: #969696;
           }
         }
       }
@@ -267,11 +277,13 @@
         border-radius: 0.5rem;
         border: none;
         padding: 0rem 0.75rem;
-        color: #969696;
+        color: #131313;
 
         &:focus {
           outline: 1px solid #4d4d4d;
-          color: black;
+        }
+        &::placeholder {
+          color: #969696;
         }
       }
     }
