--- a/src/layouts/analysis/ui/AnalysisDetail.module.scss
+++ b/src/layouts/analysis/ui/AnalysisDetail.module.scss
@@ -119,6 +119,21 @@
       padding-bottom: 40px;
       line-height: 1.8;
     }
+
+    .description {
+      text-align: center;
+
+      .agentWebSearch {
+        display: flex;
+        gap: 8px;
+        align-items: center;
+
+        img {
+          width: 16px;
+          height: 16px;
+        }
+      }
+    }
   }
 }
 
