--- a/src/pages/resume/ui/Resume.module.scss
+++ b/src/pages/resume/ui/Resume.module.scss
@@ -168,6 +168,12 @@
     border: 1px solid #eae8e2;
   }
 
+  .charCountContainer {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+
   .errorText {
     color: #e75959;
     font-size: 14px;
@@ -209,6 +215,14 @@
       justify-content: center;
       align-items: center;
     }
+  }
+
+  .charCount {
+    color: #969696;
+    font-size: 12px;
+    text-align: right;
+    width: 100%;
+    flex: 1;
   }
 
   @media (max-width: 768px) {
