--- a/src/layouts/analysis/ui/AnalysisDetail.module.scss
+++ b/src/layouts/analysis/ui/AnalysisDetail.module.scss
@@ -86,6 +86,7 @@
     padding: 12px;
     box-sizing: border-box;
     white-space: pre-wrap;
+    color: #4d4d4d;
   }
 
   .companyAndPosition {
@@ -96,15 +97,19 @@
     .companyWrapper,
     .positionWrapper {
       width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
     }
 
     .subTitle {
-      font-size: 20px;
+      font-size: 16px;
     }
     .input {
       height: 56px;
       box-sizing: border-box;
       align-content: center;
+      color: #4d4d4d;
     }
   }
 
