--- a/src/layouts/analysis/ui/AnalysisDetail.module.scss
+++ b/src/layouts/analysis/ui/AnalysisDetail.module.scss
@@ -117,6 +117,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    min-height: 50%;
 
     .streaming,
     .body {
