--- a/src/layouts/analysis/ui/AnalysisDetail.module.scss
+++ b/src/layouts/analysis/ui/AnalysisDetail.module.scss
@@ -118,7 +118,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 50%;
 
     .streaming,
     .body {
@@ -128,7 +127,11 @@
     }
 
     .description {
-      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 50vh;
 
       .agentWebSearch {
         display: flex;
