feat: 인증 코드 전송 후 타이머 기능 추가 및 스타일 개선

--- a/src/pages/analyze/ui/Analyze.module.scss
+++ b/src/pages/analyze/ui/Analyze.module.scss
@@ -370,7 +370,12 @@
     gap: 1.25rem;
     align-items: center;
     width: 37.5rem;
-    margin-top: 2.5rem;
+
+    .timerText {
+      font-size: 0.875rem;
+      font-weight: bold;
+      color: #990e17;
+    }
 
     @media (max-width: 768px) {
       width: 25rem;
