--- a/src/layouts/analysis/ui/AnalysisError.module.scss
+++ b/src/layouts/analysis/ui/AnalysisError.module.scss
@@ -10,6 +10,11 @@
   flex-direction: column;
   align-items: center;
   gap: 16px;
+
+  img {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .title {
