fix: 반응형 작업(header 코드 수정 및 분석 페이지 반응형 수정)

--- a/src/pages/analyze/ui/Analyze.module.scss
+++ b/src/pages/analyze/ui/Analyze.module.scss
@@ -310,6 +310,10 @@
     flex-direction: column;
     gap: 1.25rem;
 
+    @media (max-width: 480px) {
+      width: 312px;
+    }
+
     .inputWithButton {
       width: 100%;
       display: flex;
