--- a/src/layouts/landing/ui/Bottom.module.scss
+++ b/src/layouts/landing/ui/Bottom.module.scss
@@ -37,3 +37,14 @@
     cursor: pointer;
   }
 }
+
+@media (max-width: 767px) {
+  .sampleReport {
+    padding: 0px 10px;
+    box-sizing: border-box;
+
+    .sampleReportButton {
+      width: 100%;
+    }
+  }
+}
