--- a/src/layouts/landing/ui/Evaluation.module.scss
+++ b/src/layouts/landing/ui/Evaluation.module.scss
@@ -43,3 +43,58 @@
     top: -110px;
   }
 }
+
+@media (max-width: 1023px) {
+  .content {
+    .xCard {
+      position: absolute;
+      top: 320px;
+      left: 0px;
+    }
+    .yCard {
+      position: absolute;
+      top: 320px;
+      right: 0px;
+    }
+    .zCard {
+      position: absolute;
+      top: -110px;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .evaluationImage {
+      width: 100%;
+      position: static;
+    }
+
+    .xCard {
+      position: absolute;
+      top: 320px;
+      left: 0px;
+    }
+    .yCard {
+      position: absolute;
+      top: 320px;
+      right: 0px;
+    }
+    .zCard {
+      position: absolute;
+      top: -110px;
+    }
+
+    .xCard,
+    .yCard,
+    .zCard {
+      position: static;
+      width: 100%;
+      margin-top: 20px;
+    }
+  }
+}
