refactor: 구성원 페이지 - 반응형 코드 수정

--- a/src/layouts/team/ui/Professor.module.scss
+++ b/src/layouts/team/ui/Professor.module.scss
@@ -55,3 +55,21 @@
     }
   }
 }
+
+@media (max-width: 767px) {
+  .professor {
+    .description {
+      .professorImage {
+        position: static;
+      }
+    }
+  }
+}
+
+@media (max-width: 479px) {
+  .professor {
+    .description {
+      padding: 0px 24px 24px 24px;
+    }
+  }
+}
