--- a/src/layouts/team/ui/Member.module.scss
+++ b/src/layouts/team/ui/Member.module.scss
@@ -37,3 +37,28 @@
     }
   }
 }
+
+@media (max-width: 1023px) {
+  .member {
+    gap: 20px 12px;
+  }
+}
+
+@media (max-width: 767px) {
+  .member {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 479px) {
+  .member {
+    .card {
+      gap: 8px;
+
+      img {
+        width: 120px;
+        height: 120px;
+      }
+    }
+  }
+}
