fix: 개인정보처리방침 내용 수정

--- a/src/components/analyze/ui/PrivacyModal.module.scss
+++ b/src/components/analyze/ui/PrivacyModal.module.scss
@@ -95,8 +95,8 @@
   }
 
   p {
-    text-indent: -1rem; /* 번호 부분 앞으로 끌어당기기 */
-    padding-left: 2rem; /* 전체 들여쓰기 */
+    text-indent: -1rem;
+    padding-left: 2rem;
     margin-top: 4px;
     margin-bottom: 4px;
   }
