--- a/src/pages/evaluation3D/ui/Evaluation3D.module.scss
+++ b/src/pages/evaluation3D/ui/Evaluation3D.module.scss
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
+  gap: 80px;
+  background-color: #f4f2ed;
+  padding: 40px 40px 120px 40px;
 }
 
 .wrapper {
@@ -12,7 +14,20 @@
   flex-direction: column;
   align-items: center;
   gap: 80px;
-  padding-top: 40px;
   box-sizing: border-box;
   text-align: center;
+  background-color: white;
+  padding-bottom: 80px;
+}
+
+@media (max-width: 768px) {
+  .evaluation3D {
+    padding: 40px 20px 120px 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .evaluation3D {
+    padding: 40px 0px 100px 0px;
+  }
 }
