--- a/src/layouts/analyze/ui/IntroductionSection.module.scss
+++ b/src/layouts/analyze/ui/IntroductionSection.module.scss
@@ -13,6 +13,11 @@
     .introductionTitle {
       font-size: 1.5rem;
       font-weight: bold;
+
+      &::after {
+        content: " *";
+        color: #990e17;
+      }
     }
 
     .introductionContentWrapper {
@@ -54,6 +59,13 @@
       flex-direction: column;
       gap: 0.75rem;
       align-items: baseline;
+
+      .inputLabel {
+        &::after {
+          content: " *";
+          color: #990e17;
+        }
+      }
 
       input {
         width: 100%;
