feat: 자기소개서 분석 - 경희대 메일만 가능하다고 표시

--- a/src/layouts/analyze/ui/EmailVerificationSection.module.scss
+++ b/src/layouts/analyze/ui/EmailVerificationSection.module.scss
@@ -60,4 +60,12 @@
       cursor: not-allowed;
     }
   }
+
+  .info {
+    margin-top: -10px;
+    font-size: 15px;
+    font-weight: 500;
+    color: #969696;
+    text-align: center;
+  }
 }
